--- a/SchätzungVaR.ipynb
+++ b/SchätzungVaR.ipynb
@@ -2722,6 +2722,36 @@
     "# Ergebnisse anzeigen\n",
     "print(results_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exceeds_shrinkageVaR_95_w = abs(rolling_daily_returns_cor['GV'][exceeds_shrinkageVaR_95]) - abs(daily_shrinkageVaR_95['GV'][exceeds_shrinkageVaR_95])\n",
+    "exceeds_shrinkageVaR_99_w = abs(rolling_daily_returns_cor['GV'][exceeds_shrinkageVaR_99]) - abs(daily_shrinkageVaR_99['GV'][exceeds_shrinkageVaR_99])\n",
+    "exceeds_shrinkageVaR_999_w = abs(rolling_daily_returns_cor['GV'][exceeds_shrinkageVaR_999]) - abs(daily_shrinkageVaR_999['GV'][exceeds_shrinkageVaR_999])\n",
+    "\n",
+    "print(exceeds_shrinkageVaR_95_w.mean(),exceeds_shrinkageVaR_99_w.mean() ,exceeds_shrinkageVaR_999_w.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exceeds_VaR_95 = rolling_daily_returns_cor['GV'] < daily_normalVaR_95['GV']\n",
+    "exceeds_VaR_99 = rolling_daily_returns_cor['GV'] < daily_normalVaR_99['GV']\n",
+    "exceeds_VaR_999 = rolling_daily_returns_cor['GV'] < daily_normalVaR_999['GV']\n",
+    "\n",
+    "exceeds_daily_normalVaR_95_w = abs(rolling_daily_returns_cor['GV'][exceeds_VaR_95]) - abs(daily_normalVaR_95['GV'][exceeds_VaR_95])\n",
+    "exceeds_daily_normalVaR_99_w = abs(rolling_daily_returns_cor['GV'][exceeds_VaR_99]) - abs(daily_normalVaR_99['GV'][exceeds_VaR_99])\n",
+    "exceeds_daily_normalVaR_999_w = abs(rolling_daily_returns_cor['GV'][exceeds_VaR_999]) - abs(daily_normalVaR_999['GV'][exceeds_VaR_999])\n",
+    "\n",
+    "print(exceeds_daily_normalVaR_95_w.mean(), exceeds_daily_normalVaR_99_w.mean(), exceeds_daily_normalVaR_999_w.mean())"
+   ]
   }
  ],
  "metadata": {
